# parabuild

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: example.py
parabuild/: __init__.py  parabuild.py  setup.py
parabuild/test/: test_parabuild.py
parabuild/test/example_project/: CMakeLists.txt
