[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "parabuild"
version = "0.1.2"
description = "Multi-process building to run multiple versions of a project."
readme = "README.md"
authors = [
    {name = "Jarden Pan", email = "xm.jarden@gmail.com"},
]
maintainers = [
    {name = "Jarden Pan", email = "xm.jarden@gmail.com"},
]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["tqdm"]

[project.urls]
homepage = "https://github.com/panjd123/parabuild"
source = "https://github.com/panjd123/parabuild"

[tool.setuptools.packages.find]
where = ["parabuild"]
